--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,6 +1,8 @@
 .profile-picture {
-    width: 150px;
-    height: auto;
-    border-radius: 50%;
-  }
-  
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 150px;
+  height: auto;
+  border-radius: 50%;
+}
