--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,18 +1,18 @@
 ---
-layout: page
-title: "Browse by Topic"
-permalink: /tags/
+layout: default
 ---
 
-{% for tag in site.tags %}
-### {{ tag[0] }}
+<h1>{{ site.title }}</h1>
+<p>{{ site.author.bio }}</p>
 
+{{ content }}
+
+<h2>Recent Posts</h2>
 <ul>
-  {% for post in tag[1] %}
+  {% for post in site.posts limit:20 %}
     <li>
       <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time>
       &mdash; <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
   {% endfor %}
 </ul>
-{% endfor %}
