--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,12 @@
 ---
-layout: single
+layout: default
 ---
-{{ content }}
+
+<article>
+  <h1>{{ page.title }}</h1>
+  <p><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></p>
+
+  {{ content }}
+
+  <p><a href="/">&larr; Back to home</a></p>
+</article>
